<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/search_item_merchandise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/sales_name"
        android:textColor="#000"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/search_item_customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/sales_customer"
        android:textColor="#000"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/search_item_sales_nums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/sales_nums"
        android:textColor="#000"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/search_item_sales_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/sales_price"
        android:textColor="#000"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/search_item_sales_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/time"
        android:textColor="#000"
        android:textSize="23sp" />

</TableRow>