<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <AutoCompleteTextView
                android:id="@+id/suggest_out_merchandise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:completionThreshold="1"
                android:hint="@string/search_merchandise"
                android:textColor="#000"
                android:textSize="16sp" />

            <AutoCompleteTextView
                android:id="@+id/suggest_out_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:completionThreshold="1"
                android:hint="@string/search_customer"
                android:textColor="#000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/suggest_out_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/search_ok"
                android:textColor="#000"
                android:textSize="16sp" >
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/suggest_out_merchandise_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/sales_name"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/suggest_out_normal_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/sales_price"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/suggest_out_customer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/sales_customer"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/suggest_out_customer_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/sales_customer_price"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/suggest_out_demond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/sales_customer_demand"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/suggest_out_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/sales_customer_tel"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/suggest_out_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/sales_customer_phone"
                android:textColor="#000"
                android:textSize="20sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/suggest_out_result_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cacheColorHint="#00000000" >
        </ListView>
    </LinearLayout>

</HorizontalScrollView>