<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/main_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#3cffffff"
        android:padding="10dp"
        android:text="@string/main_total" />

    <Button
        android:id="@+id/main_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#3cffffff"
        android:padding="10dp"
        android:text="@string/main_search" />

    <Button
        android:id="@+id/main_sales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#3cffffff"
        android:padding="10dp"
        android:text="@string/main_sales" />

    <Button
        android:id="@+id/main_purchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#3cffffff"
        android:padding="10dp"
        android:text="@string/main_purchase" />

    <Button
        android:id="@+id/main_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#3cffffff"
        android:padding="10dp"
        android:text="@string/main_entry" />

</LinearLayout>