<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    android:text="@string/sales_name"
                    android:textSize="20sp" />

                <AutoCompleteTextView
                    android:id="@+id/suggest_in_merchandise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"
                    android:textColor="#000" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    android:text="@string/suggest_in_normal"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/suggest_in_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    android:text="@string/sales_customer"
                    android:textSize="20sp" />

                <AutoCompleteTextView
                    android:id="@+id/suggest_in_customer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"
                    android:textColor="#000" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    android:text="@string/suggest_in_spical"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/suggest_in_spical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/suggest_in_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:paddingTop="5dp"
            android:text="@string/ok"
            android:textSize="23sp" />
    </LinearLayout>

</ScrollView>